# smtish

./: .gitmodules  Cargo.toml  bar.smtlib  foo.smtlib
src/: main.rs  solver.rs
