[package]
name = "smtish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amzn-smt-ir = { path = "./rust-smt-ir/amzn-smt-ir", version = "0.1" }
smt2parser = "0.6.1"
smallvec = "1.6"
num = "0.3.1"
hex = "0.4.3"